# code-explorer-mcp

./: .gitignore  CLAUDE.md  README.md  REVIEW_REPORT.md  main.py  pyproject.toml  setup_ts_parser_poc.py
.github/workflows/: publish-pypi.yml
docs/: mcp-output-simplification-plan.md  publishing.md
docs/plans/: PLAN.md  simplify-output-implementation.md
docs/superpowers/plans/: 2026-04-18-code-explorer-mcp-mvp.md
src/: setup_node_runtime.py  setup_ts_parser_poc.py
src/code_explorer_mcp/: __main__.py  main.py  models.py  parser_registry.py  presentation.py  runtime_config.py  runtime_context.py  server.py  setup_node_runtime.py  tool_file_parse.py  tool_project_structure.py  tool_symbol_fetch.py
src/code_explorer_mcp/parsing/: base.py  common.py  package-lock.json  package.json  python_parser.py  typescript_bridge.mjs  typescript_parser.py
src/code_explorer_mcp/utils/: gitignore.py  paths.py  tree.py
src/legacy/: gitignore.py
src/ts_parser_poc/: README.txt  example.ts  package-lock.json  package.json  run_poc.py  ts_parser_bridge.mjs
src/utils/: code_parser.py  constants.py  file_discovery.py  project_structure.py
tests/: test_main.py  test_mcp_stdio_integration.py  test_parser_tool_integration.py  test_parsing_foundation.py  test_path_tool_errors.py  test_paths.py  test_presentation.py  test_project_structure.py  test_tree.py
tests/fixtures/: python_sample.py  typescript_sample.ts
