[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-explorer-mcp"
version = "0.1.0"
description = "Local MCP code exploration server prototypes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2,<4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[project.scripts]
code-explorer-mcp = "code_explorer_mcp.__main__:main"
code-explorer-mcp-server = "code_explorer_mcp.__main__:main"
code-explorer-mcp-node-setup = "setup_node_runtime:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "setup_node_runtime"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["code_explorer_mcp*"]
namespaces = true

[tool.uv]
package = true
