[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "code-explorer-mcp"
version = "0.1.0"
description = "Local MCP code exploration server prototypes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2,<4",
    "pathspec>=0.12,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]

[project.scripts]
code-explorer-mcp = "code_explorer_mcp.main:main"
code-explorer-node-setup = "code_explorer_mcp.setup_node_runtime:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/python_sample.py" = ["F401"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    ".claude",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "src/code_explorer_mcp/parsing/node_modules",
    "tests/fixtures",
    "venv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/code_explorer_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/src/code_explorer_mcp/parsing/package.json",
    "/src/code_explorer_mcp/parsing/package-lock.json",
    "/src/code_explorer_mcp/parsing/typescript_bridge.mjs",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.11",
]
